# shellsense

./: .gitignore  README.md  pyproject.toml
shellsense/: cache.py  cli.py  explainer.py  formatter.py  knowledge.py  manpage.py  parser.py  tldr.py
tests/: test_explainer.py  test_knowledge.py  test_parser.py
