[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "shellsense"
version = "0.1.0"
description = "A tool that explains Linux shell commands in plain English"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Manish", email = "077bei022.manish@pcampus.edu.np"}
]

dependencies = [
    "rich>=13.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[project.scripts]
shellsense = "shellsense.cli:main"